@startuml Package **cloudapps.mastermind.controllers.implementation**

package "cloudapps.mastermind.controllers.implementation" {
  
  class LogicImplementation extends cloudapps.mastermind.controllers.Logic {
    #StartControllerImplementation startControllerImplementation
    #PlayControllerImplementation playControllerImplementation
    #ResumeControllerImplementation resumeControllerImplementation
    +LogicImplementation()
  }

  class PlayControllerImplementation extends cloudapps.mastermind.controllers.PlayController {
    -ActionController actionController
    -UndoController undoController
    -RedoController redoController
    +PlayControllerImplementation(Session)
    +addProposedCombination(List<Color>): void
    +continueState(): void
    +getAttempts(): int
    +getBlacks(int): int
    +getColors(int): List<Color>
    +getCombinationWidth(): int
    +getProposedCombinationError(List<Color>): Error
    +getWhites(int): int
    +isFinished(): boolean
    +isLooser(): boolean
    +isWinner(): boolean
    +redo(): void
    +redoable(): boolean
    +undo(): void
    +undoable(): boolean
  }

  class ResumeControllerImplementation extends cloudapps.mastermind.controllers.ResumeController {
    -SessionImplementation sessionImplementation
    +ResumeControllerImplementation(Session)
    +getCombinationWidth(): int
    +resume(boolean): void
  }

  class StartControllerImplementation extends cloudapps.mastermind.controllers.StartController {
    -SessionImplementation sessionImplementation
    +StartControllerImplementation(Session)
    +getCombinationWidth(): int
    +start(): void
  }

  LogicImplementation *--> StartControllerImplementation
  LogicImplementation *--> PlayControllerImplementation
  LogicImplementation *--> ResumeControllerImplementation
  LogicImplementation ..> cloudapps.mastermind.models.SessionImplementation
  LogicImplementation ..> cloudapps.mastermind.models.StateValue

  PlayControllerImplementation *-left-> cloudapps.mastermind.controllers.ActionController
  PlayControllerImplementation *-left-> cloudapps.mastermind.controllers.UndoController
  PlayControllerImplementation *-left-> cloudapps.mastermind.controllers.RedoController
  PlayControllerImplementation .left.> cloudapps.mastermind.models.Session
  PlayControllerImplementation .left.> cloudapps.mastermind.types.Color
  PlayControllerImplementation .left.> cloudapps.mastermind.types.Error
  PlayControllerImplementation .left.> java.util.List

  ResumeControllerImplementation *--> cloudapps.mastermind.models.SessionImplementation
  ResumeControllerImplementation ..> cloudapps.mastermind.models.Session

  StartControllerImplementation *--> cloudapps.mastermind.models.SessionImplementation
  StartControllerImplementation ..> cloudapps.mastermind.models.Session

}

@enduml
